--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@id/saToolbar"
         tools:ignore="MissingClass">
 
-        <com.aceinteract.android.stepper.StepperNavigationView
+        <!--<com.aceinteract.android.stepper.StepperNavigationView
             android:id="@+id/stepper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -68,7 +68,7 @@
             app:stepperTextColor="@android:color/black"
             app:stepperTextSize="12sp"
             app:stepperType="fleets"
-            app:stepperWidgetColor="@color/" />
+            app:stepperWidgetColor="@color/" />-->
       <!--  <com.sonu.libraries.materialstepper.MaterialStepper
             android:id="@+id/materialStepper"
             android:layout_width="match_parent"
