--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="yellow">#FFA902</color>
     <color name="fav">#FF6464</color>
     <color name="grey01">#E8EFF3</color>
+    <color name="tcstepper">#0A3C48</color>
 </resources>
