--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -35,6 +35,25 @@
         <item name="cardCornerRadius">@dimen/card_radius_default</item>
     </style>
 
+    <!--<style name="StepView">
+        <item name="sv_selectedCircleColor">@color/main</item>
+        <item name="sv_selectedCircleRadius">14dp</item>
+        <item name="sv_stepNumberTextSize">12sp</item>
+        <item name="sv_doneStepMarkColor">@color/main</item>
+        <item name="sv_doneCircleColor">@color/main</item>
+        <item name="sv_doneCircleRadius">14dp</item>
+        <item name="sv_doneTextColor">#0A3C48</item>
+        <item name="sv_nextTextColor">#0A3C48</item>
+        <item name="sv_nextStepLineColor">@color/main</item>
+        <item name="sv_doneStepLineColor">@color/main</item>
+        <item name="sv_stepPadding">12dp</item>
+        <item name="sv_textPadding">12dp</item>
+        <item name="sv_stepLineWidth">0.5dp</item>
+        <item name="sv_animationDuration">200</item>
+        <item name="sv_textSize">14sp</item>
+        <item name="sv_animationType">Line</item>
+    </style>
+-->
 
 
 
