--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -11,14 +11,16 @@
         android:id="@+id/tvAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:fontFamily="@font/poppins"
-        android:layout_marginStart="@dimen/_22sdp"
         android:text="Address"
-        android:textStyle="bold"
         android:textColor="@color/black"
         android:textFontWeight="500"
         android:textSize="@dimen/_14sdp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints,UnusedAttribute" />
 
     <EditText
@@ -26,15 +28,15 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
         android:autoSizeTextType="uniform"
-        android:layout_marginTop="@dimen/_11sdp"
-        android:layout_marginStart="@dimen/_22sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginEnd="@dimen/_22sdp"
         android:background="@drawable/edittext_shipping"
         android:focusable="auto"
         android:fontFamily="@font/lato"
         android:hint="Type your home address"
         android:imeOptions="actionSearch"
-        android:inputType="text"
+        android:inputType="textPostalAddress"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
         android:paddingStart="@dimen/_15sdp"
@@ -69,7 +71,7 @@
         android:layout_width="@dimen/_115sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginStart="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/edittext_shipping"
         android:ems="15"
@@ -77,7 +79,7 @@
         android:fontFamily="@font/lato"
         android:hint="Enter here"
         android:imeOptions="actionSearch"
-        android:inputType="textEmailAddress"
+        android:inputType="numberDecimal"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
         android:paddingStart="@dimen/_15sdp"
@@ -111,7 +113,7 @@
         android:id="@+id/etCity"
         android:layout_width="@dimen/_115sdp"
         android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/edittext_shipping"
         android:ems="15"
@@ -119,7 +121,7 @@
         android:fontFamily="@font/lato"
         android:hint="Enter here"
         android:imeOptions="actionSearch"
-        android:inputType="textEmailAddress"
+        android:inputType="textAutoCorrect"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
         android:paddingStart="@dimen/_15sdp"
@@ -153,8 +155,8 @@
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_11sdp"
-        android:layout_marginStart="@dimen/_22sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginEnd="@dimen/_22sdp"
         android:background="@drawable/edittext_shipping"
         app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +168,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:layout_marginEnd="@dimen/_24sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:src="@drawable/address_arrow_drop_down"
         app:layout_constraintBottom_toBottomOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="@+id/spinner"
@@ -182,12 +184,13 @@
         android:checked="true"
         android:fontFamily="@font/poppins"
         android:text="Save shipping address"
-        android:textAlignment="center"
+        android:textFontWeight="400"
         android:textColor="@color/black"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner"
         tools:ignore="HardcodedText" />
+<!--
 
     <Button
         android:id="@+id/faNextBtn"
@@ -208,4 +211,5 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 -->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
