--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -47,46 +47,109 @@
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
-    <LinearLayout
-        android:id="@+id/stepperView"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_86sdp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/saToolbar"
-        tools:ignore="MissingConstraints">
 
-    <params.com.stepview.StatusViewScroller
-        android:id="@+id/stepper"
-        android:layout_width="match_parent"
+  <!--  <params.com.stepview.StatusViewScroller
+        android:id="@+id/stepperView"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/_86sdp"
-        app:circleColor="@color/white"
-        app:completeDrawable="@drawable/ic_complet_check_circle"
-        app:currentDrawable="@drawable/ic_seleted_check_circle"
-        app:incompleteDrawable="@drawable/ic_unseleted_check_circle"
-        app:circleColorCurrent="@color/white"
+        android:foregroundGravity="center"
+        android:layout_marginStart="@dimen/_29sdp"
+        android:layout_marginEnd="@dimen/_28sdp"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingStart="@dimen/_5sdp"
+        android:paddingEnd="@dimen/_5sdp"
+        app:stepCount="3"
         app:currentCount="2"
         app:drawLabels="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saToolbar"
+        android:entries="@array/status"
+        app:circleColorType="fillStroke"
+        app:lineWidth="@dimen/_2sdp"
         app:lineColor="@color/main"
+        app:lineColorIncomplete="@color/soft"
         app:lineColorCurrent="@color/main"
-        app:lineColorIncomplete="@color/grey02"
-        app:lineLength="@dimen/_40sdp"
-        app:lineWidth="@dimen/_1sdp"
-        app:stepCount="3"
-        app:textSizeLabels="@dimen/_15sdp"
+        app:circleColor="@color/main"
+        app:circleColorCurrent="@color/white"
+        app:circleStrokeColor="@color/main"
+        app:lineLength="@dimen/_62sdp"
+        app:circleColorIncomplete="@color/grey02"
+        app:circleStrokeColorCurrent="@color/main"
+        app:circleStrokeColorIncomplete="@color/grey02"
+        app:circleStrokeWidth="@dimen/_3sdp"
+        app:statusTopMargin="@dimen/_12sdp"
+        app:statusFont="@font/poppins"
+        app:textColorStatus="#0A3C48"
+        app:incompleteDrawable="@drawable/ic_unseleted_check_circle"
+        app:currentDrawable="@drawable/ic_seleted_check_circle"
+       app:textSizeStatus="@dimen/_12sdp"
+        app:completeDrawable="@drawable/ic_complet_check_circle"
+        app:layout_constraintTop_toBottomOf="@+id/saToolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
-    </LinearLayout>
-
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/frame_stepper"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+-->
+    <com.shuhart.stepview.StepView
+        android:id="@+id/stepView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_86sdp"
+        android:foregroundGravity="center"
+        android:layout_marginStart="@dimen/_22sdp"
+        android:layout_marginEnd="@dimen/_21sdp"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingStart="@dimen/_5sdp"
+        android:paddingEnd="@dimen/_5sdp"
+        app:sv_stepsNumber="3"
+        app:sv_selectedCircleColor="@color/main"
+        app:sv_selectedTextColor="@color/tcstepper"
+        app:sv_stepLineWidth="1dp"
+        app:sv_stepPadding="@dimen/_10sdp"
+        app:sv_nextTextColor="@color/soft"
+        app:sv_doneTextColor="@color/soft"
+        app:sv_selectedCircleStroke="@color/main"
+        app:sv_nextStepLineColor="@color/soft"
+        app:sv_doneCircleColor="@color/main"
+        app:sv_nextStepCircleEnabled="true"
+        app:sv_doneStepLineColor="@color/main"
+        app:sv_doneCircleRadius="12dp"
+        app:sv_selectedCircleRadius="12dp"
+        app:sv_selectedStepNumberColor="@color/tcstepper"
+        app:sv_stepViewStyle="@style/StepView"
+        app:sv_doneStepMarkColor="@color/main"
+        app:sv_animationType="Line"
+        app:layout_constraintTop_toBottomOf="@+id/saToolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <FrameLayout
+        android:id="@+id/fragmentHolder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/_130sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stepView"
+        tools:ignore="MissingConstraints,UnknownId" />
+
+    <Button
+        android:id="@+id/fdNextBtn"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_46sdp"
+        android:layout_marginStart="@dimen/_22sdp"
+        android:layout_marginEnd="@dimen/_22sdp"
+        android:layout_marginBottom="@dimen/_12sdp"
+        android:background="@drawable/fill_button_selector"
+        android:elevation="50dp"
+        android:text="@string/screen_next"
+        android:textColor="@drawable/fill_button_text_selector"
+        android:textSize="@dimen/_12sdp"
+        android:textStyle="bold"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stepperView"
-        app:navGraph="@navigation/nav_stepper" />
+        tools:ignore="MissingConstraints" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
