--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -3,44 +3,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".PaymentFragment">
+
+
        <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="UnknownId">
           <androidx.constraintlayout.widget.ConstraintLayout
-              android:id="@+id/viewPage"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
-
-
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCodBtn"
         android:layout_width="@dimen/_72sdp"
         android:layout_height="@dimen/_85sdp"
-        android:layout_marginTop="@dimen/_22sdp"
         app:cardCornerRadius="@dimen/_12sdp"
+        android:clickable="true"
+        android:layout_marginTop="@dimen/_5sdp"
         android:background="@drawable/ic_sl_btn_unseleted_box"
         android:layout_marginStart="@dimen/_22sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_gravity="center">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_12sdp"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+
             android:src="@drawable/ic_save_money_unseleted"/>
         <TextView
             android:layout_width="wrap_content"
@@ -60,17 +65,22 @@
         android:id="@+id/cvCreditCardBtn"
         android:layout_width="@dimen/_72sdp"
         android:layout_height="@dimen/_85sdp"
-        android:layout_marginTop="@dimen/_22sdp"
         app:cardCornerRadius="@dimen/_12sdp"
+        android:clickable="true"
+        android:layout_marginTop="@dimen/_5sdp"
         android:background="@drawable/ic_sl_btn_unseleted_box"
         android:layout_marginStart="@dimen/_15sdp"
         app:layout_constraintStart_toEndOf="@+id/cvCodBtn"
         app:layout_constraintTop_toTopOf="parent">
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_gravity="center">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_13sdp"/>
+
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -91,42 +101,51 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvPaipalBtn"
-        android:layout_width="@dimen/_72sdp"
-        android:layout_height="@dimen/_85sdp"
-        android:layout_marginTop="@dimen/_22sdp"
-        app:cardCornerRadius="@dimen/_12sdp"
-        android:background="@drawable/ic_sl_btn_unseleted_box"
-        android:layout_marginStart="@dimen/_15sdp"
-        app:layout_constraintStart_toEndOf="@+id/cvCreditCardBtn"
-        app:layout_constraintTop_toTopOf="parent">
+              <androidx.cardview.widget.CardView
+                  android:id="@+id/cvPaipalBtn"
+                  android:layout_width="@dimen/_72sdp"
+                  android:layout_height="@dimen/_85sdp"
+                  android:layout_marginStart="@dimen/_15sdp"
+                  android:clickable="true"
+                  android:layout_marginEnd="@dimen/_22sdp"
+                  android:layout_marginTop="@dimen/_5sdp"
+                  android:background="@drawable/ic_sl_btn_unseleted_box"
+                  app:cardCornerRadius="@dimen/_12sdp"
+                  app:layout_constraintEnd_toEndOf="parent"
+                  app:layout_constraintStart_toEndOf="@+id/cvCreditCardBtn"
+                  app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center">
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:layout_gravity="center"
+                      android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_paypal_unselected"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_9sdp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="Paipal \nMethod"
-                android:lineHeight="@dimen/_11sdp"
-                android:textColor="@color/dark"
-                android:fontFamily="@font/poppins"
-                android:textSize="@dimen/_9sdp"/>
-        </LinearLayout>
+                      <View
+                          android:layout_width="match_parent"
+                          android:layout_height="@dimen/_12sdp" />
 
-    </androidx.cardview.widget.CardView>
+
+                      <ImageView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:src="@drawable/ic_paypal_unselected" />
+
+                      <TextView
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:layout_marginTop="@dimen/_9sdp"
+                          android:fontFamily="@font/poppins"
+                          android:gravity="center"
+                          android:lineHeight="@dimen/_11sdp"
+                          android:text="Paipal \nMethod"
+                          android:textColor="@color/dark"
+                          android:textSize="@dimen/_9sdp" />
+                  </LinearLayout>
+
+              </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCreditCard"
@@ -234,7 +253,6 @@
         android:focusable="auto"
         android:fontFamily="@font/lato"
         android:hint="Enter your Holder Name"
-        android:imeOptions="actionSearch"
         android:inputType="text"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
@@ -317,7 +335,6 @@
         android:focusable="auto"
         android:fontFamily="@font/lato"
         android:hint="Enter here"
-        android:imeOptions="actionSearch"
         android:inputType="textEmailAddress"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
@@ -355,11 +372,10 @@
         android:layout_marginStart="@dimen/_15sdp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/edittext_shipping"
-        android:ems="15"
+        android:ems="5"
         android:focusable="auto"
         android:fontFamily="@font/lato"
-        android:hint="Enter here"
-        android:imeOptions="actionSearch"
+        android:hint="@string/enter_here"
         android:inputType="numberPassword"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
@@ -379,7 +395,7 @@
                   android:fontFamily="@font/poppins"
                   android:layout_marginTop="@dimen/_15sdp"
                   android:layout_marginStart="@dimen/_21sdp"
-                  android:text="Country"
+                  android:text="@string/country"
                   android:textStyle="bold"
                   android:textColor="@color/black"
                   android:textFontWeight="500"
@@ -432,7 +448,8 @@
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_46sdp"
                   android:layout_marginStart="@dimen/_22sdp"
-                  android:layout_marginTop="@dimen/_15sdp"
+                  android:layout_marginTop="@dimen/_12sdp"
+                  android:layout_marginBottom="@dimen/_5sdp"
                   android:layout_marginEnd="@dimen/_22sdp"
                   android:background="@drawable/fill_button_selector"
                   android:elevation="50dp"
@@ -446,7 +463,6 @@
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/cbPayment"
                   tools:ignore="MissingConstraints" />
-
 
 
           </androidx.constraintlayout.widget.ConstraintLayout>
