update ShippingAddress sreen

--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -47,8 +47,9 @@
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
+<!--
 
-  <!--  <params.com.stepview.StatusViewScroller
+    <params.com.stepview.StatusViewScroller
         android:id="@+id/stepperView"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_86sdp"
@@ -78,10 +79,10 @@
         app:statusTopMargin="@dimen/_12sdp"
         app:statusFont="@font/poppins"
         app:textColorStatus="#0A3C48"
-        app:incompleteDrawable="@drawable/ic_unseleted_check_circle"
-        app:currentDrawable="@drawable/ic_seleted_check_circle"
+        app:incompleteDrawable="@drawable/ic_check_unseleted_circle"
+        app:currentDrawable="@drawable/ic_check__seleted_circle"
        app:textSizeStatus="@dimen/_12sdp"
-        app:completeDrawable="@drawable/ic_complet_check_circle"
+        app:completeDrawable="@drawable/ic_check_done_circle"
         app:layout_constraintTop_toBottomOf="@+id/saToolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,29 +92,22 @@
         android:id="@+id/stepView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_86sdp"
-        android:foregroundGravity="center"
-        android:layout_marginStart="@dimen/_22sdp"
-        android:layout_marginEnd="@dimen/_21sdp"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingStart="@dimen/_5sdp"
-        android:paddingEnd="@dimen/_5sdp"
+        android:layout_marginStart="@dimen/_34sdp"
+        android:layout_marginEnd="@dimen/_33sdp"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingStart="@dimen/_13sdp"
+        android:paddingEnd="@dimen/_12sdp"
         app:sv_stepsNumber="3"
-        app:sv_selectedCircleColor="@color/main"
-        app:sv_selectedTextColor="@color/tcstepper"
-        app:sv_stepLineWidth="1dp"
-        app:sv_stepPadding="@dimen/_10sdp"
-        app:sv_nextTextColor="@color/soft"
-        app:sv_doneTextColor="@color/soft"
-        app:sv_selectedCircleStroke="@color/main"
-        app:sv_nextStepLineColor="@color/soft"
+        app:sv_stepLineWidth="@dimen/_1sdp"
+        app:sv_doneTextColor="@color/stepview_text_done"
+        app:sv_selectedTextColor="@color/stepview_text_selected"
+        app:sv_nextTextColor="@color/stepview_text_next"
+        app:sv_doneStepLineColor="@color/stepview_line_done"
+        app:sv_nextStepLineColor="@color/stepview_line_next"
+        app:sv_doneStepMarkColor="@color/white"
         app:sv_doneCircleColor="@color/main"
-        app:sv_nextStepCircleEnabled="true"
-        app:sv_doneStepLineColor="@color/main"
-        app:sv_doneCircleRadius="12dp"
-        app:sv_selectedCircleRadius="12dp"
-        app:sv_selectedStepNumberColor="@color/tcstepper"
-        app:sv_stepViewStyle="@style/StepView"
-        app:sv_doneStepMarkColor="@color/main"
+        app:sv_nextCircleColor="@color/soft"
+        app:sv_selectedCircleColor="@drawable/sele"
         app:sv_animationType="Line"
         app:layout_constraintTop_toBottomOf="@+id/saToolbar"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,13 +118,14 @@
         android:id="@+id/fragmentHolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/_130sdp"
+        android:layout_marginTop="@dimen/_135sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stepView"
         tools:ignore="MissingConstraints,UnknownId" />
+
 
     <Button
         android:id="@+id/fdNextBtn"
