--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.tanamgroceryapp.fragments.HomeFragment"
+        android:name="com.example.tanamgroceryapp.Fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/favFragment"
-        android:name="com.example.tanamgroceryapp.fragments.FavFragment"
+        android:name="com.example.tanamgroceryapp.Fragments.FavFragment"
         android:label="fragment_fav"
         tools:layout="@layout/fragment_fav" />
 </navigation>
