--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -21,56 +21,75 @@
         <item name="android:minHeight">@dimen/_40sdp</item>
         <item name="android:maxHeight">@dimen/_20sdp</item>
     </style>
+
     <declare-styleable name="StepView">
-        <attr format="reference" name="sv_selectedCircleColor"/>
-        <attr format="color" name="sv_selectedCircleRadius"/>
+        <attr format="integer" name="sv_stepsNumber"/>
+        <attr format="dimension" name="sv_stepLineWidth"/>
+        <attr format="color" name="sv_doneTextColor"/>
         <attr format="color" name="sv_selectedTextColor"/>
-        <attr format="color" name="sv_selectedStepNumberColor"/>
+        <attr format="color" name="sv_nextTextColor"/>
+        <attr format="color" name="sv_doneStepLineColor"/>
+        <attr format="color" name="sv_nextStepLineColor"/>
         <attr format="color" name="sv_doneStepMarkColor"/>
         <attr format="color" name="sv_doneCircleColor"/>
-        <attr format="color" name="sv_selectedCircleStroke"/>
-        <attr format="color" name="sv_doneCircleRadius"/>
-        <attr format="color" name="sv_doneTextColor"/>
-        <attr format="color" name="sv_nextTextColor"/>
-        <attr format="color" name="sv_nextStepLineColor"/>
-        <attr format="reference" name="sv_doneStepLineColor"/>
-        <attr format="dimension" name="sv_stepPadding"/>
-        <attr format="dimension" name="sv_stepNumberTextSize"/>
-        <attr format="dimension" name="sv_textPadding"/>
-        <attr format="dimension" name="sv_stepLineWidth"/>
-        <attr format="dimension" name="sv_textSize"/>
-        <attr format="color" name="sv_background"/>
-        <attr format="integer" name="sv_animationDuration"/>
         <attr format="reference" name="sv_stepViewStyle"/>
+        <attr format="color" name="sv_nextCircleColor"/>
+        <attr format="reference" name="sv_selectedCircleColor"/>
+
         <attr format="enum" name="sv_animationType">
             <enum name="Line" value="0"/>
             <enum name="Circle" value="1"/>
             <enum name="All" value="2"/>
             <enum name="None" value="3"/>
         </attr>
-        <attr format="integer" name="sv_stepsNumber"/>
+
+
+
+
+        <attr format="dimension" name="sv_selectedCircleRadius"/>
+        <attr format="color" name="sv_selectedStepNumberColor"/>
+        <attr format="dimension" name="sv_stepNumberTextSize"/>
+        <attr format="reference" name="sv_selectedMarkDrawable"/>
+        <attr format="dimension" name="sv_doneCircleRadius"/>
+        <attr format="dimension" name="sv_stepPadding"/>
+        <attr format="dimension" name="sv_textPadding"/>
+        <attr format="dimension" name="sv_textSize"/>
+        <attr format="color" name="sv_background"/>
+        <attr format="integer" name="sv_animationDuration"/>
+
         <attr format="reference" name="sv_steps"/>
         <attr format="reference" name="sv_typeface"/>
         <attr format="boolean" name="sv_nextStepCircleEnabled"/>
-        <attr format="reference" name="sv_nextStepCircleColor"/>
+        <attr format="color" name="sv_nextStepCircleColor"/>
     </declare-styleable>
 
     <style name="StepView">
         <item name="sv_selectedCircleColor">@color/main</item>
-        <item name="sv_selectedCircleRadius">@dimen/_12sdp</item>
-        <item name="sv_stepNumberTextSize">@dimen/_12sdp</item>
-        <item name="sv_doneStepMarkColor">@color/main</item>
+        <item name="sv_selectedCircleRadius">14dp</item>
         <item name="sv_doneCircleColor">@color/main</item>
-        <item name="sv_doneCircleRadius">@dimen/_34sdp</item>
-        <item name="sv_nextStepLineColor">@color/soft</item>
-        <item name="sv_doneStepLineColor">@color/main</item>
-        <item name="sv_stepPadding">@dimen/_12sdp</item>
-        <item name="sv_textPadding">@dimen/_14sdp</item>
-        <item name="sv_stepLineWidth">0.5dp</item>
-        <item name="sv_animationDuration">200</item>
+        <item name="sv_doneCircleRadius">14dp</item>
+        <item name="sv_nextStepCircleColor">@color/grey02</item>
+
+        <item name="sv_doneTextColor">@color/tcstepper</item>
+        <item name="sv_selectedTextColor">@color/tcstepper</item>
+        <item name="sv_nextTextColor">@color/soft</item>
+        <item name="sv_textPadding">@dimen/_12sdp</item>
         <item name="sv_textSize">@dimen/_14sdp</item>
+
+        <item name="sv_doneStepMarkColor">@color/white</item>
+        <item name="sv_nextCircleColor">@color/grey02</item>
+
+
+        <item name="sv_stepNumberTextSize">12sp</item>
+
+
+        <item name="sv_nextStepLineColor">@color/stepview_line_next</item>
+        <item name="sv_doneStepLineColor">@color/stepview_line_done</item>
+        <item name="sv_stepPadding">12dp</item>
+        <item name="sv_stepLineWidth">0.5dp</item>
+
+        <item name="sv_animationDuration">200</item>
         <item name="sv_animationType">Line</item>
     </style>
-
 
 </resources>
